--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Beyond Distraction</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>A Little Girl Wants An Answer From Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Pizza Napoletana the real one</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Cheesy garlic dough bites, baked in the Ooni volt2 these are my fave! #pizza #oonipizzaoven @OoniHQ</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>Bach Got GOT by Arthur!😭</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -277,7 +277,7 @@
                     <div class="video-info">
                         <h3>How Eric Went From Losing Money to Profitable Algo Trader</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -508,7 +508,7 @@
                     <div class="video-info">
                         <h3>Healthy Eating And The Big Problem With Your Food | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -882,7 +882,7 @@
                     <div class="video-info">
                         <h3>Revitalizing India's Rivers | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2635,7 +2635,7 @@
                     <div class="video-info">
                         <h3>POV: A Philly Sandwich Nobody Talks About (With My Own Hoagie Rolls)</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Nov 01, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5776,7 +5776,7 @@
                         <div class="video-info">
                             <h3>How Eric Went From Losing Money to Profitable Algo Trader</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Beyond Distraction</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>A Little Girl Wants An Answer From Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8019,7 +8019,7 @@
                         <div class="video-info">
                             <h3>Healthy Eating And The Big Problem With Your Food | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8140,7 +8140,7 @@
                         <div class="video-info">
                             <h3>Revitalizing India's Rivers | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>Pizza Napoletana the real one</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9417,7 +9417,7 @@
                         <div class="video-info">
                             <h3>Cheesy garlic dough bites, baked in the Ooni volt2 these are my fave! #pizza #oonipizzaoven @OoniHQ</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9648,7 +9648,7 @@
                         <div class="video-info">
                             <h3>POV: A Philly Sandwich Nobody Talks About (With My Own Hoagie Rolls)</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Nov 01, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -10287,7 +10287,7 @@
                         <div class="video-info">
                             <h3>Bach Got GOT by Arthur!😭</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
