--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>UNBOX &. TEST MY NEW. GOZNEY  TRED OVENS</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">27 minutes ago</div>
+                        <div class="date">45 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Beyond Distraction</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>A Little Girl Wants An Answer From Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Pizza Napoletana the real one</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>Cheesy garlic dough bites, baked in the Ooni volt2 these are my fave! #pizza #oonipizzaoven @OoniHQ</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -288,7 +288,7 @@
                     <div class="video-info">
                         <h3>How Eric Went From Losing Money to Profitable Algo Trader</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -508,7 +508,7 @@
                     <div class="video-info">
                         <h3>Bach Caught Arthur Lacking💤😅</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -629,7 +629,7 @@
                     <div class="video-info">
                         <h3>Arthur & W2S Have a Race🏃🏻‍♂️🏊🏻‍♂️</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -750,7 +750,7 @@
                     <div class="video-info">
                         <h3>Who Let Arthur, Chip & AB Drink Together?🍺😂</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -871,7 +871,7 @@
                     <div class="video-info">
                         <h3>AB Reacts to Arthur New Hairstyle😂</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -882,7 +882,7 @@
                     <div class="video-info">
                         <h3>Display all Symbol Swaps in MT5 (+ Return in Percent) | mql5 Coding Tutorial</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1025,7 +1025,7 @@
                     <div class="video-info">
                         <h3>Arthur & Chip Troll Chip's Producer😭</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -1036,7 +1036,7 @@
                     <div class="video-info">
                         <h3>The Body Remembers All | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5776,7 +5776,7 @@
                         <div class="video-info">
                             <h3>How Eric Went From Losing Money to Profitable Algo Trader</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5897,7 +5897,7 @@
                         <div class="video-info">
                             <h3>Display all Symbol Swaps in MT5 (+ Return in Percent) | mql5 Coding Tutorial</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Beyond Distraction</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>A Little Girl Wants An Answer From Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8195,7 +8195,7 @@
                         <div class="video-info">
                             <h3>The Body Remembers All | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>UNBOX &. TEST MY NEW. GOZNEY  TRED OVENS</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">27 minutes ago</div>
+                            <div class="date">45 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -9406,7 +9406,7 @@
                         <div class="video-info">
                             <h3>Pizza Napoletana the real one</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9428,7 +9428,7 @@
                         <div class="video-info">
                             <h3>Cheesy garlic dough bites, baked in the Ooni volt2 these are my fave! #pizza #oonipizzaoven @OoniHQ</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10375,7 +10375,7 @@
                         <div class="video-info">
                             <h3>Bach Caught Arthur Lacking💤😅</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10419,7 +10419,7 @@
                         <div class="video-info">
                             <h3>Arthur & W2S Have a Race🏃🏻‍♂️🏊🏻‍♂️</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10452,7 +10452,7 @@
                         <div class="video-info">
                             <h3>Who Let Arthur, Chip & AB Drink Together?🍺😂</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10496,7 +10496,7 @@
                         <div class="video-info">
                             <h3>AB Reacts to Arthur New Hairstyle😂</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10540,7 +10540,7 @@
                         <div class="video-info">
                             <h3>Arthur & Chip Troll Chip's Producer😭</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
