--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>A Little Girl Wants An Answer From Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Pizza Napoletana the real one</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -277,7 +277,7 @@
                     <div class="video-info">
                         <h3>Cheesy garlic dough bites, baked in the Ooni volt2 these are my fave! #pizza #oonipizzaoven @OoniHQ</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -288,7 +288,7 @@
                     <div class="video-info">
                         <h3>Bach Got GOT by Arthur!😭</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -1863,7 +1863,7 @@
                     <div class="video-info">
                         <h3>Can You Guess The Movie?</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>A Little Girl Wants An Answer From Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9406,7 +9406,7 @@
                         <div class="video-info">
                             <h3>Pizza Napoletana the real one</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9428,7 +9428,7 @@
                         <div class="video-info">
                             <h3>Cheesy garlic dough bites, baked in the Ooni volt2 these are my fave! #pizza #oonipizzaoven @OoniHQ</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10287,7 +10287,7 @@
                         <div class="video-info">
                             <h3>Bach Got GOT by Arthur!😭</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10870,7 +10870,7 @@
                         <div class="video-info">
                             <h3>Can You Guess The Movie?</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
